A quick example of individual card render with animate.css

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,7 @@ head
   link(rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700')
   // CSS Files
   link#pagestyle(href='css/material-dashboard.css' rel='stylesheet')
+  link#pagestyle(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css' rel='stylesheet')
 body.g-sidenav-show.bg-gray-200
 .main-content.position-relative.max-height-vh-100.h-100
   .container-fluid.px-2.px-md-4
