--- a/views/index.pug
+++ b/views/index.pug
@@ -2,13 +2,13 @@ doctype html
 head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-  link(rel='apple-touch-icon' sizes='76x76' href='img/apple-icon.png')
-  link(rel='icon' type='image/png' href='img/favicon.png')
+  link(rel='apple-touch-icon' sizes='76x76' href='../assets/img/apple-icon.png')
+  link(rel='icon' type='image/png' href='../assets/img/favicon.png')
   title The Wire Characters
   // Font
   link(rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700')
   // CSS Files
-  link#pagestyle(href='css/material-dashboard.css' rel='stylesheet')
+  link#pagestyle(href='../assets/css/material-dashboard.css' rel='stylesheet')
   link#pagestyle(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css' rel='stylesheet')
   // Material Icons
   link(href='https://fonts.googleapis.com/icon?family=Material+Icons+Round' rel='stylesheet')
@@ -39,11 +39,11 @@ body.g-sidenav-show.bg-gray-200
     .toast-header.border-0
       i.material-icons.text-success.me-2 check
       span#success-toast-title.me-auto.font-weight-bold 
-      small.text-body 11 mins ago
+      small.text-body A moment ago
       i.fas.fa-times.text-md.ms-3.cursor-pointer(data-bs-dismiss='toast' aria-label='Close')
     hr.horizontal.dark.m-0
     .toast-body
       span#success-toast-message
-  script(src='js/core/popper.min.js')
-  script(src='js/core/bootstrap.min.js')
-  script(src='js/characters/characters.js')
+  script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js' integrity='sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk' crossorigin='anonymous')
+  script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js' integrity='sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy' crossorigin='anonymous')
+  script(src='../assets/js/characters/characters.js' type="module")
